--- a/alterarDados.html
+++ b/alterarDados.html
@@ -31,8 +31,7 @@
                     <label class="dados"> Nome: <input type="text"  value="Jean" ></label>        
                     <label class="dados"> Email: <input type="email" value="joaozino@gmail.com" ></label>
                     <label class="dados"> Senha: <input type="password"  value="12345678" ></label>
-                    <label class="dados">Url foto: <input type="url" ><button id="pesquisar">Pesquisar</button></label>
-                    <label class="dados">Cartão de Crédito: <input type="number" value="213414523542234" ></label>             
+                    <label id="url" class="dados">Url foto: <input type="url" ><input  type="file" id="pesquisar"></input></label>            
                     <button id="salvar">Salvar</button>
             
 
