--- a/transacoes.html
+++ b/transacoes.html
@@ -27,10 +27,16 @@
             <footer id="logout" class="menu">Desconectar</footer>
 
         </div>
-        <div class="content">               
-            
-
-        
-    </div>
+        <div class="content">   
+                <article class="compras">
+                    <img src="imagens/monalisa.jpg"><spam>Preço: R$ 100.000,00</spam><spam >Data: 03/01/2022</spam>
+                </article>
+                <article class="compras">
+                    <img src="imagens/escolaDeAtenas.jpg"><spam>Preço: R$ 1.000.000,00</spam><spam>Data: 24/12/2021</spam>
+                </article>
+                <article class="compras">
+                    <img src="imagens/oGrito.jpg"><spam>Preço: R$ 500.000,00</spam><spam >Data: 25/05/2021</spam>
+                </article>                 
+        </div>
     </div>
 </body>
