--- a/alterarDados.html
+++ b/alterarDados.html
@@ -31,7 +31,7 @@
                     <label class="dados"> Nome: <input type="text"  value="Jean" ></label>        
                     <label class="dados"> Email: <input type="email" value="joaozino@gmail.com" ></label>
                     <label class="dados"> Senha: <input type="password"  value="12345678" ></label>
-                    <label id="url" class="dados">Url foto: <input type="url" ><input  type="file" id="pesquisar"></input></label>            
+                    <label id="url" class="dados">Url foto:<input  type="file" id="pesquisar"></input></label>            
                     <button id="salvar">Salvar</button>
             
 
