--- a/pagamentos.html
+++ b/pagamentos.html
@@ -86,7 +86,7 @@
                   </div>
                 </div>
                 <div><label id="valorPagamento">Valor a pagar: R$ 100.000,00</label></div>  
-                <div class="btn">
+                <div class="btn-pagamento">
                   Pagar
                 </div> 
                 
@@ -97,4 +97,5 @@
         </div>
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.mask/1.14.15/jquery.mask.min.js"></script>
+    <script src="script/pagamentos.js"></script>
 </body>
