--- a/adicionarPost.html
+++ b/adicionarPost.html
@@ -21,10 +21,10 @@
         <div class="sidebar">
             <section id="perfil" class="menu"><img src="imagens/profileIcon.jpeg" id="imgPerfil" alt="imagem de perfil padrão"></section>
             <nav id="meusPosts" class="menu"><p>Minhas Publicações</p></nav>
-            <nav id="addPost" class="menu"> <p>Adicionar post</p></nav>
-            <nav class="menu"><p>Histórico de transações</p></nav>
+            <nav id="adicionarPost" class="menu"> <p>Adicionar post</p></nav>
+            <nav id="historicoTransacoes" class="menu"><p>Histórico de transações</p></nav>
             <nav id="alterarDados" class="menu"><p>alterar dados</p></nav>
-            <footer id="logout" class="menu">Desconectar</footer>
+            <footer id="footerMenu" class="menu"><button id="btnLogout">Desconectar</button></footer>
 
         </div>
         <div class="content">     
@@ -60,7 +60,7 @@
                 </section>
                 <img src="imagens/oGrito.jpg" class="filtros" id="imgAdicionada">
                 <button class="filtros" id="salvar">Publicar</button>
-                 
+        </div>
     </div>
-    </div>
+    <script src="script/adicionarPost.js"></script>
 </body>
