--- a/outrosUsuarios.html
+++ b/outrosUsuarios.html
@@ -36,8 +36,8 @@
                 <section id="comentar" class="sectionsPost">
                     <img id="imgCurtida" class="alterar" src="imagens/curtido.png"> <img id="imgComentario" src="imagens/comentario.png"> 
                     <section class="sctnComentario">
-                    <input type="text" id="addComentario" value=""><button id="btnComentar">comentar</button>
-                </section> 
+                        <input type="text" id="addComentario" value=""><button id="btnComentar">comentar</button>
+                    </section> 
                 </section>
                 <section id="comentarios" class="sectionsPost">
                     <article>
@@ -365,4 +365,5 @@
             </article>
         </div>      
     </div>
+    <script src="script/outrosUsuarios.js"></script>
 </body>
