--- a/transacoes.html
+++ b/transacoes.html
@@ -21,10 +21,10 @@
         <div class="sidebar">
             <section id="perfil" class="menu"><img src="imagens/profileIcon.jpeg" id="imgPerfil" alt="imagem de perfil padrão"></section>
             <nav id="meusPosts" class="menu"><p>Minhas Publicações</p></nav>
-            <nav id="addPost" class="menu"> <p>Adicionar post</p></nav>
-            <nav id="transacoes" class="menu"><p>Histórico de transações</p></nav>
+            <nav id="adicionarPost" class="menu"> <p>Adicionar post</p></nav>
+            <nav id="historicoTransacoes" class="menu"><p>Histórico de transações</p></nav>
             <nav id="alterarDados" class="menu"><p>alterar dados</p></nav>
-            <footer id="logout" class="menu">Desconectar</footer>
+            <footer id="footerMenu" class="menu"><button id="btnLogout">Desconectar</button></footer>
 
         </div>
         <div class="content">   
@@ -39,4 +39,5 @@
                 </article>                 
         </div>
     </div>
+    <script src="script/transacoes.js"></script>
 </body>
