curtida/naocurtida e balaozinho arrumado

--- a/login.html
+++ b/login.html
@@ -65,7 +65,7 @@
                         <input type="password" placeholder="Senha">
                     </label>
                     
-                    <a id="btnLogar" class="btn btn-second" href="/home.html" style="text-decoration: none;">Login</a>
+                    <a id="btnLogar" class="btn btn-second" href="./home.html" style="text-decoration: none;">Login</a>
                 </form>
             </div><!-- second column -->
         </div><!-- second-content -->
