tela outros usuarios e pagamentos arrumado

--- a/outrosUsuarios.html
+++ b/outrosUsuarios.html
@@ -28,7 +28,7 @@
                     <section class="perfil">
                         <img src="imagens/profileIcon.jpeg"><label>Usuario22</label> 
                     </section>
-                    <section class="pagamento"> <input type="text" id="precoPagamento" value="R$100.000,00" disabled> <img src="imagens/pagamento.png"></section>
+                    <section class="pagamento"> <input type="text" id="precoPagamento" value="R$100.000,00" disabled> <img id="pagamentoSaco" src="imagens/pagamento.png"></section>
                 </section>
                 <section class="sectionsPost">
                         <img id="imgPost" src="imagens/escolaDeAtenas.jpg">
@@ -62,7 +62,7 @@
                     <section class="perfil">
                         <img src="imagens/profileIcon.jpeg"><label>Usuario22</label> 
                     </section>
-                    <section class="pagamento"> <input type="text" id="precoPagamento" value="R$100.000,00" disabled> <img src="imagens/pagamento.png"></section>
+                    <section class="pagamento"> <input type="text" id="precoPagamento" value="R$100.000,00" disabled> <img id="pagamentoSaco" src="imagens/pagamento.png"></section>
                 </section>
                 <section class="sectionsPost">
                         <img id="imgPost" src="imagens/escolaDeAtenas.jpg">
@@ -96,7 +96,7 @@
                     <section class="perfil">
                         <img src="imagens/profileIcon.jpeg"><label>Usuario22</label> 
                     </section>
-                    <section class="pagamento"> <input type="text" id="precoPagamento" value="R$100.000,00" disabled> <img src="imagens/pagamento.png"></section>
+                    <section class="pagamento"> <input type="text" id="precoPagamento" value="R$100.000,00" disabled> <img id="pagamentoSaco" src="imagens/pagamento.png"></section>
                 </section>
                 <section class="sectionsPost">
                         <img id="imgPost" src="imagens/escolaDeAtenas.jpg">
@@ -130,7 +130,7 @@
                     <section class="perfil">
                         <img src="imagens/profileIcon.jpeg"><label>Usuario22</label> 
                     </section>
-                    <section class="pagamento"> <input type="text" id="precoPagamento" value="R$100.000,00" disabled> <img src="imagens/pagamento.png"></section>
+                    <section class="pagamento"> <input type="text" id="precoPagamento" value="R$100.000,00" disabled> <img id="pagamentoSaco" src="imagens/pagamento.png"></section>
                 </section>
                 <section class="sectionsPost">
                         <img id="imgPost" src="imagens/escolaDeAtenas.jpg">
@@ -164,7 +164,7 @@
                     <section class="perfil">
                         <img src="imagens/profileIcon.jpeg"><label>Usuario22</label> 
                     </section>
-                    <section class="pagamento"> <input type="text" id="precoPagamento" value="R$100.000,00" disabled> <img src="imagens/pagamento.png"></section>
+                    <section class="pagamento"> <input type="text" id="precoPagamento" value="R$100.000,00" disabled> <img id="pagamentoSaco" src="imagens/pagamento.png"></section>
                 </section>
                 <section class="sectionsPost">
                         <img id="imgPost" src="imagens/escolaDeAtenas.jpg">
@@ -198,7 +198,7 @@
                     <section class="perfil">
                         <img src="imagens/profileIcon.jpeg"><label>Usuario22</label> 
                     </section>
-                    <section class="pagamento"> <input type="text" id="precoPagamento" value="R$100.000,00" disabled> <img src="imagens/pagamento.png"></section>
+                    <section class="pagamento"> <input type="text" id="precoPagamento" value="R$100.000,00" disabled> <img id="pagamentoSaco" src="imagens/pagamento.png"></section>
                 </section>
                 <section class="sectionsPost">
                         <img id="imgPost" src="imagens/escolaDeAtenas.jpg">
@@ -232,7 +232,7 @@
                     <section class="perfil">
                         <img src="imagens/profileIcon.jpeg"><label>Usuario22</label> 
                     </section>
-                    <section class="pagamento"> <input type="text" id="precoPagamento" value="R$100.000,00" disabled> <img src="imagens/pagamento.png"></section>
+                    <section class="pagamento"> <input type="text" id="precoPagamento" value="R$100.000,00" disabled> <img id="pagamentoSaco" src="imagens/pagamento.png"></section>
                 </section>
                 <section class="sectionsPost">
                         <img id="imgPost" src="imagens/escolaDeAtenas.jpg">
@@ -266,7 +266,7 @@
                     <section class="perfil">
                         <img src="imagens/profileIcon.jpeg"><label>Usuario22</label> 
                     </section>
-                    <section class="pagamento"> <input type="text" id="precoPagamento" value="R$100.000,00" disabled> <img src="imagens/pagamento.png"></section>
+                    <section class="pagamento"> <input type="text" id="precoPagamento" value="R$100.000,00" disabled> <img id="pagamentoSaco" src="imagens/pagamento.png"></section>
                 </section>
                 <section class="sectionsPost">
                         <img id="imgPost" src="imagens/escolaDeAtenas.jpg">
@@ -300,7 +300,7 @@
                     <section class="perfil">
                         <img src="imagens/profileIcon.jpeg"><label>Usuario22</label> 
                     </section>
-                    <section class="pagamento"> <input type="text" id="precoPagamento" value="R$100.000,00" disabled> <img src="imagens/pagamento.png"></section>
+                    <section class="pagamento"> <input type="text" id="precoPagamento" value="R$100.000,00" disabled> <img id="pagamentoSaco" src="imagens/pagamento.png"></section>
                 </section>
                 <section class="sectionsPost">
                         <img id="imgPost" src="imagens/escolaDeAtenas.jpg">
@@ -334,7 +334,7 @@
                     <section class="perfil">
                         <img src="imagens/profileIcon.jpeg"><label>Usuario22</label> 
                     </section>
-                    <section class="pagamento"> <input type="text" id="precoPagamento" value="R$100.000,00" disabled> <img src="imagens/pagamento.png"></section>
+                    <section class="pagamento"> <input type="text" id="precoPagamento" value="R$100.000,00" disabled> <img id="pagamentoSaco" src="imagens/pagamento.png"></section>
                 </section>
                 <section class="sectionsPost">
                         <img id="imgPost" src="imagens/escolaDeAtenas.jpg">
