--- a/home.html
+++ b/home.html
@@ -22,7 +22,7 @@
     <div class="container">
         <div class="sidebar">
 
-            <label class="filtros">Filtros</label>
+            <label class="filtros">Busca Avançada</label>
             <section>
             <label class="filtros" for="estilos">Estilos de arte:</label>
                 <select id="Estilos">
